--- a/player.html
+++ b/player.html
@@ -1,44 +1,111 @@
+<!-- player.html -->
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Video Autoplay Fullscreen</title>
+    <title>Player - Sistema de Playlist</title>
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+            overflow: hidden;
+            background: #000;
+            width: 1920px;
+            height: 1080px;
+        }
+        #player {
+            width: 1920px;
+            height: 1080px;
+            pointer-events: none; /* Desabilita interações com o mouse */
+        }
+        /* Impede seleção de texto */
+        * {
+            user-select: none;
+            -webkit-user-select: none;
+            -moz-user-select: none;
+            -ms-user-select: none;
+        }
+    </style>
 </head>
 <body>
-
-    <!-- Adicionando autoplay no vídeo -->
-    <video id="myVideo" controls autoplay muted>
-        <source src="seu-video.mp4" type="video/mp4">
-        Seu navegador não suporta o elemento de vídeo.
-    </video>
+    <div id="player"></div>
 
     <script>
-        // Seleciona o vídeo e entra em tela cheia automaticamente
-        window.addEventListener("load", () => {
-            const video = document.getElementById("myVideo");
+        let player;
+        let playlist = [];
+        let currentVideoIndex = 0;
 
-            // Função para iniciar o vídeo em tela cheia
-            const requestFullscreen = () => {
-                if (video.requestFullscreen) {
-                    video.requestFullscreen();
-                } else if (video.webkitRequestFullscreen) { // Suporte para Safari
-                    video.webkitRequestFullscreen();
-                } else if (video.mozRequestFullScreen) { // Suporte para Firefox
-                    video.mozRequestFullScreen();
-                } else if (video.msRequestFullscreen) { // Suporte para IE/Edge
-                    video.msRequestFullscreen();
+        // Carrega a API do YouTube
+        const tag = document.createElement('script');
+        tag.src = "https://www.youtube.com/iframe_api";
+        const firstScriptTag = document.getElementsByTagName('script')[0];
+        firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
+
+        // Função chamada automaticamente pela API do YouTube
+        function onYouTubeIframeAPIReady() {
+            loadPlaylist();
+        }
+
+        function loadPlaylist() {
+            // Pega a playlist da URL
+            const urlParams = new URLSearchParams(window.location.search);
+            const playlistParam = urlParams.get('playlist');
+            
+            if (playlistParam) {
+                playlist = JSON.parse(decodeURIComponent(playlistParam));
+                if (playlist.length > 0) {
+                    initializePlayer();
                 }
-            };
+            }
+        }
 
-            // Reproduz o vídeo e aciona o modo fullscreen
-            video.play().then(() => {
-                requestFullscreen();
-            }).catch(error => {
-                console.error("Erro ao reproduzir o vídeo em fullscreen:", error);
+        function initializePlayer() {
+            player = new YT.Player('player', {
+                width: '1920',
+                height: '1080',
+                videoId: playlist[currentVideoIndex],
+                playerVars: {
+                    'autoplay': 1,
+                    'controls': 0,
+                    'disablekb': 1,
+                    'rel': 0,
+                    'showinfo': 0,
+                    'modestbranding': 1,
+                    'fs': 0,
+                    'playsinline': 1
+                },
+                events: {
+                    'onReady': onPlayerReady,
+                    'onStateChange': onPlayerStateChange
+                }
             });
-        });
-    </script>
+        }
 
+        function onPlayerReady(event) {
+            event.target.playVideo();
+            // Força o modo tela cheia
+            const iframe = document.querySelector('#player');
+            iframe.style.position = 'fixed';
+            iframe.style.top = '0';
+            iframe.style.left = '0';
+            iframe.style.width = '1920px';
+            iframe.style.height = '1080px';
+        }
+
+        function onPlayerStateChange(event) {
+            // Quando o vídeo termina
+            if (event.data === YT.PlayerState.ENDED) {
+                playNextVideo();
+            }
+        }
+
+        function playNextVideo() {
+            currentVideoIndex++;
+            if (currentVideoIndex >= playlist.length) {
+                currentVideoIndex = 0; // Volta ao início da playlist
+            }
+            player.loadVideoById(playlist[currentVideoIndex]);
+        }
+    </script>
 </body>
 </html>
